# Tegame

./: README.md  pyproject.toml  requirements.txt  tegame.ipynb
notebooks/: play_and_check_moves.ipynb  play_using_the_ML_model_and_check_moves.ipynb
notebooks/ML_pipeline/: 1_generate_training_set.ipynb  2_train_model.ipynb  game_state.pkl
notebooks/statistical_analysis_no_ML/different_thresholds_different_shuffles_resulting_in_unconstant_rate/: replica_1.ipynb
script/: run_game.bat  run_game.sh
src/: __init__.py  encode.py  main.py  tegame.py
tegame/: README.md  __init__.py  play_1_game_using_module_and_check_story.ipynb  run_game.py  scan_win_rate_against_thresholds.ipynb  tegame.ipynb  tegame.py  test_notebook.ipynb
tegame/notebooks/ML_pipeline/: 3_scan_win_rate.ipynb  tegame_model.pth
tegame/notebooks/statistical_analysis_no_ML/: different_thresholds_same_deck_shuffles_result_in_constant_rate.ipynb
tegame/notebooks/statistical_analysis_no_ML/different_thresholds_different_shuffles_resulting_in_unconstant_rate/: replica_2.ipynb
tegame/src/: dataset.py  models.py
tegame/statistical_analysis/: variance_is_all_about_deck_shuffle_rather_than_thresholds.ipynb
