[project]
name = "Tegame"
version = "0.0.1"
authors = [ { name = "Ivan Giannì" }, { name = "Piermarco Saraceno" } ]
description = "A Python implementation of The Game with supervised ML utilities"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20",
    "torch>=1.12",
    "tqdm>=4.60",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "scikit-learn>=1.0",
    "jupyter>=1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
